--- a/src/pages/app/study/index.astro
+++ b/src/pages/app/study/index.astro
@@ -12,7 +12,7 @@ if ($user.get() === undefined && Astro.url.pathname !== "/") {
 ---
 
 <Layout>
-    <div class="container mx-auto mt-14">
+    <div class="mx-auto min-h-full" >
         <Study client:only="preact" />
     </div>
 </Layout>
