--- a/src/pages/app/study/results.astro
+++ b/src/pages/app/study/results.astro
@@ -11,7 +11,7 @@ if ($user.get() === undefined && Astro.url.pathname !== "/") {
 ---
 
 <Layout>
-    <div class="container mx-auto mt-14">
+    <div class="container mx-auto ">
         <div class={"flex justify-between"}>
             <h1 class={"text-3xl font-bold mb-10"}>carrusel expressions</h1>
 
