--- a/src/components/ListCard.astro
+++ b/src/components/ListCard.astro
@@ -19,7 +19,7 @@ const { set, userBook_id, name, card_id, expression_id } = Astro.props;
             const cardId = this.dataset.cardId;
             const expressionId = this.dataset.expressionId;
             const name = this.dataset.name;
-            const setable = this.dataset.setable;
+            // const setable = this.dataset.setable;
 
             // DELETE
             this.querySelector("div.delete")?.addEventListener("click", (e) => {
