--- a/src/layouts/index.astro
+++ b/src/layouts/index.astro
@@ -1,7 +1,6 @@
 ---
 import Navbar from "./navigation/Navbar.astro";
-import Sidebar from "./Sidebar.astro";
-import Protected from "./Protected.astro";
+
 import AppBar from "./navigation/AppBar.astro";
 // import './tailmater.css'
 
@@ -10,7 +9,7 @@ export interface Props {
 	verify?: boolean;
 }
 
-const { title, verify } = Astro.props;
+// const { title, verify } = Astro.props;
 ---
 
 <html lang="en" data-darkreader-scheme="dark">
