--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,6 @@ if ($user.get() && Astro.url.pathname == "/") {
     return Astro.redirect("/app");
 }
 
-console.log($user.get())
 ---
 
 <Layout title="panel de control">
@@ -23,9 +22,9 @@ console.log($user.get())
 
     <div class="relative">
         <!-- background -->
-        <div
+        <div 
             aria-hidden="true"
-            class="absolute inset-0 grid grid-cols-2 -space-x-52 opacity-40 dark:opacity-20"
+            class="pointer-events-none absolute inset-0 grid grid-cols-2 -space-x-52 opacity-40 dark:opacity-20"
         >
             <div
                 class="blur-[106px] h-56 bg-gradient-to-br from-primary to-purple-400 dark:from-blue-700"
@@ -39,11 +38,11 @@ console.log($user.get())
         <!-- background -->
 
         <div
-            class="relative m-auto px-6 md:px-12 lg:px-7 flex flex-col justify-center items-center h-screen"
+            class=""
         >
             <div class="lg:w-2/3 text-center mx-auto">
                 <h1
-                    class="text-gray-900 dark:text-white font-bold text-5xl md:text-6xl xl:text-7xl"
+                    class="text-gray-900 dark:text-white font-bold text-4xl sm:text-6xl xl:text-7xl"
                 >
                     Shaping a world with <span class="text-primary"
                         >reimagination.</span
