--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,16 +2,29 @@
 import Layout from "@/layouts/index.astro";
 import { $user } from "@lib/db/user.store";
 
-
 if ($user.get() && Astro.url.pathname == "/") {
     return Astro.redirect("/app");
 }
+let url = Astro.url;
+const getURL = () => {
+    let host_url =
+        import.meta.env.SITE_URL ?? // Automatically set by Vercel.
+        url.origin;
+    // Make sure to include `https://` when not localhost.
+    host_url = host_url.includes("http") ? host_url : `https://${host_url}`;
+    // Make sure to include a trailing `/`.
+    host_url =
+        host_url.charAt(host_url.length - 1) === "/"
+            ? host_url
+            : `${host_url}/`;
+    return host_url;
+};
 
+console.log(import.meta.env.SITE_URL);
+console.log(getURL());
 ---
 
 <Layout title="panel de control">
-
-    
     <!-- <div class="w-full container mx-auto mt-16 mb-24">
         <div class="p-6 rounded-xl bg-neutral-10 dark:bg-neutral-900 border border-gray-200 dark:border-gray-700 ">
 
@@ -19,10 +32,9 @@ if ($user.get() && Astro.url.pathname == "/") {
         </div>
     </div> -->
 
-
     <div class="relative">
         <!-- background -->
-        <div 
+        <div
             aria-hidden="true"
             class="pointer-events-none absolute inset-0 grid grid-cols-2 -space-x-52 opacity-40 dark:opacity-20"
         >
@@ -37,9 +49,7 @@ if ($user.get() && Astro.url.pathname == "/") {
         </div>
         <!-- background -->
 
-        <div
-            class=""
-        >
+        <div class="">
             <div class="lg:w-2/3 text-center mx-auto">
                 <h1
                     class="text-gray-900 dark:text-white font-bold text-4xl sm:text-6xl xl:text-7xl"
@@ -65,7 +75,7 @@ if ($user.get() && Astro.url.pathname == "/") {
                         </h3>
 
                         <form
-                        aria-label="login by SSRR "
+                            aria-label="login by SSRR "
                             action="/api/v0/auth/OAuth/provider"
                             method="post"
                             class="mt-6 flex flex-wrap sm:grid gap-6 grid-cols-2"
@@ -173,6 +183,4 @@ if ($user.get() && Astro.url.pathname == "/") {
             </div>
         </div>
     </div>
-
-
 </Layout>
