--- a/src/components/ListUserBooks.astro
+++ b/src/components/ListUserBooks.astro
@@ -1,6 +1,6 @@
 ---
 import { supabase } from "@lib/supabase";
-import { $user } from "@lib/db/user.store";
+import { $user } from "@lib/user/user.store";
 import type { SPB_UserBook } from "@/env";
 
 // types
