--- a/src/pages/app/books/index.astro
+++ b/src/pages/app/books/index.astro
@@ -3,7 +3,7 @@
 import ListUserBooks from "@components/ListUserBooks.astro";
 import Layout from "@/layouts/index.astro";
 
-import {$user} from '@lib/db/user.store'
+import {$user} from '@lib/user/user.store'
 if ($user.get() === undefined && Astro.url.pathname !== "/") {
     return Astro.redirect("/");
 }
