--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "@/layouts/index.astro";
-import { $user } from "@lib/db/user.store";
-import { saveUser } from "@lib/db/user.controller";
+import { $user } from "@lib/user/user.store";
+import { saveUser } from "@lib/user/user.controller";
 
 if ($user.get() && Astro.url.pathname == "/") {
     return Astro.redirect("/app");
