--- a/src/pages/app/study/index.astro
+++ b/src/pages/app/study/index.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from "@layouts/index.astro";
-import Study from "@components/StudyInterface.preact";
+import Layout from "@components/layouts/index.astro";
+import Study from "@components/client/session_interface";
 
 import { $user } from "@lib/user/user.store";
 import type { SPB_FlashCard } from "@lib/flashcard/flashcard.schema";
