--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from "@/layouts/index.astro";
+import Layout from "@components/layouts/index.astro";
 import { $user } from "@lib/user/user.store";
 import { saveUser } from "@lib/user/user.controller";
 
