--- a/src/pages/app/books/[book_id]-[book_name].astro
+++ b/src/pages/app/books/[book_id]-[book_name].astro
@@ -1,5 +1,5 @@
 ---
-import Layout from "@/layouts/index.astro";
+import Layout from "@components/layouts/index.astro";
 import { supabase } from "@lib/supabase";
 import SetBook from "@components/SetBookName.astro";
 
