--- a/src/pages/app/books/index.astro
+++ b/src/pages/app/books/index.astro
@@ -1,7 +1,7 @@
 ---
 
 import ListUserBooks from "@components/ListUserBooks.astro";
-import Layout from "@/layouts/index.astro";
+import Layout from "@components/layouts/index.astro";
 
 import {$user} from '@lib/user/user.store'
 if ($user.get() === undefined && Astro.url.pathname !== "/") {
