--- a/src/pages/app/study/results.astro
+++ b/src/pages/app/study/results.astro
@@ -1,7 +1,7 @@
 ---
-import Layout from "@layouts/index.astro";
+import Layout from "@components/layouts/index.astro";
 
-import ListReview from "@components/StudyInterface.preact/ListReview";
+import ListReview from "@components/client/session_interface/ListReview";
 import {$user} from '@lib/user/user.store'
 
 if ($user.get() === undefined && Astro.url.pathname !== "/") {
