--- a/src/components/layouts/navigation/Navbar.astro
+++ b/src/components/layouts/navigation/Navbar.astro
@@ -1,6 +1,7 @@
 ---
-import BtnIcon from "@components/ui/BtnIcon.astro";
+import Logout from "./Logout";
 import Navigator from "./Navigator.astro";
+import Settings from "./Settings";
 ---
 
 <div
@@ -9,16 +10,13 @@ import Navigator from "./Navigator.astro";
   <a href="/">
     <h2 class="text-2xl leading-7 hover:underline">Flasky</h2>
   </a>
-  <div class="flex items-center"> 
-    <div class="hidden sm:flex mr-4">
 
-      <Navigator />
+  <Settings client:only="preact" >
+    <div class="flex items-center">
+      <div class="hidden sm:flex mr-4">
+        <Navigator />
+      </div>
+      <Logout client:only="preact" />
     </div>
-    <a href="/api/v0/auth/logout">
-      <BtnIcon>
-        <h2 class="hidden sm:flex">logout</h2>
-        <span class="material-symbols-outlined"> logout </span>
-      </BtnIcon>
-    </a>
-  </div>
+  </Settings>
 </div>
