--- a/src/pages/app/books/[book_id]-[book_name].astro
+++ b/src/pages/app/books/[book_id]-[book_name].astro
@@ -11,10 +11,6 @@ const { book_id, book_name } = Astro.params;
 
 const userdata = $user.get();
 
-if (userdata === undefined) {
-    return redirect("/");
-}
-
 //  get all card_expresion
 const { data: flasCards } = await supabase
     .from("flashcard")
@@ -62,22 +58,22 @@ const { data: flasCards } = await supabase
         <ul class="flex flex-col gap-8 mt-16">
             {
                 flasCards?.map((v) => (
-                        <li class="shadow-md shadow-black bg-surface-100 dark:bg-surfacedark-100">
-                            <FlashCard
-                                set={true}
-                                name={v.expression_name}
-                                userBook_id={book_id as string}
-                                card_id={v.id}
-                                expression_id={v.expression_id}
-                            />
-                        </li>
-                    ))
+                    <li class="shadow-md shadow-black bg-surface-100 dark:bg-surfacedark-100">
+                        <FlashCard
+                            set={true}
+                            name={v.expression_name}
+                            userBook_id={book_id as string}
+                            card_id={v.id}
+                            expression_id={v.expression_id}
+                        />
+                    </li>
+                ))
             }
 
             <li>
                 <form method="POST" action="/api/v0/flashcard/add" class="">
                     <input type="hidden" name="user_book_id" value={book_id} />
-                    <input type="hidden" name="user_id" value={userdata.id} />
+                    <input type="hidden" name="user_id" value={userdata?.id} />
                     <input
                         type="hidden"
                         name="user_book_name"
@@ -98,11 +94,10 @@ const { data: flasCards } = await supabase
                         />
 
                         <label
-                        onclick="()=>console.log(this)"
+                            onclick="()=>console.log(this)"
                             for="input33"
                             class="absolute tracking-[.03125em] text-gray-500 dark:text-gray-400 bg-neutral-10 dark:bg-transparent duration-300 transform px-1 -translate-y-7 scale-75 top-4 z-10 origin-[0] left-4 peer-focus:left-4 peer-focus:text-primary-600 dark:peer-focus:text-primary-200 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-7 peer-focus:bg-neutral-10 dark:peer-focus:bg-neutral-900 peer-focus:px-1 peer-invalid:text-error-600 dark:peer-invalid:text-error-200
-                            pointer-events-none
-                            "
+                            pointer-events-none"
                             >Nueva Expression</label
                         >
                     </div>
