--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,27 +1,12 @@
 ---
-import Layout from "@components/layouts/index.astro";
-import { $user } from "@lib/user/user.store";
-import { saveUser } from "@lib/user/user.controller";
-
-
-
+import Layout from "@layout";
+import { getUserFromAuthCode } from "@app/user/auth/controllers";
 if (Astro.url.searchParams.get("code")) {
-    return saveUser(Astro);
-}
-if($user.get()){
-    return Astro.redirect("/app")
-
+    const user = await getUserFromAuthCode(Astro);
 }
 ---
 
 <Layout title="panel de control">
-    <!-- <div class="w-full container mx-auto mt-16 mb-24">
-        <div class="p-6 rounded-xl bg-neutral-10 dark:bg-neutral-900 border border-gray-200 dark:border-gray-700 ">
-
-            <Study client:only="preact" />
-        </div>
-    </div> -->
-
     <div class="relative">
         <!-- background -->
         <div
@@ -66,14 +51,14 @@ if($user.get()){
 
                         <form
                             aria-label="login by SSRR "
-                            action="/api/v0/auth/OAuth/provider"
+                            action="/api/v1/auth/login"
                             method="post"
                             class="mt-6 flex flex-wrap sm:grid gap-6 grid-cols-2"
                         >
                             <button
                                 disabled
                                 class="cursor-not-allowed
-        w-full h-11 rounded-full border border-gray-300/75 bg-white px-6 transition active:bg-gray-50 dark:bg-gray-700 dark:border-gray-600 dark:hover:bg-gray-800 dark:hover:border-gray-700"
+w-full h-11 rounded-full border border-gray-300/75 bg-white px-6 transition active:bg-gray-50 dark:bg-gray-700 dark:border-gray-600 dark:hover:bg-gray-800 dark:hover:border-gray-700"
                             >
                                 <div
                                     class="w-max mx-auto flex items-center justify-center space-x-4"
