--- a/src/app/userbook/List.astro
+++ b/src/app/userbook/List.astro
@@ -1,34 +1,14 @@
 ---
-import { supabase } from "@lib/supabase";
-import { $user } from "@lib/user/user.store";
-import type { SPB_UserBook } from "@/env";
-
-// types
-import type { PostgrestSingleResponse } from "@supabase/supabase-js";
-type UserBook = PostgrestSingleResponse<SPB_UserBook[]>;
-
-const userdata = $user.get();
-
-if (userdata == undefined) {
-    return false;
-}
-
-// supabase userbook
-const { data: userbook }: UserBook = await supabase
-    .from("user-book")
-    .select("*")
-    .eq("user_id", userdata.id);
+import { serviceGetUserBookList } from "./model/service";
+const { user_id } = Astro.props;
+const listUserBook = await serviceGetUserBookList(user_id);
 ---
 
-<div class="flex flex-col sm:flex-row items-center justify-between gap-4 my-12">
-    <h3 class="text-2xl font-semibold text-gray-700 dark:text-white">
-        Lista de libros
-    </h3>
-</div>
-
-<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4  gap-4">
+<div
+    class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4"
+>
     {
-        userbook?.map((v) => (
+        listUserBook?.map((v) => (
             <a href={"/app/books/" + v.id + "-" + v.name}>
                 <div class="w-full rounded-lg p-8  shadow-md shadow-black flex flex-col gap-1 bg-surface-100 dark:bg-surfacedark-100">
                     <h1 class="text-2xl ">{v.name}</h1>
@@ -36,7 +16,7 @@ const { data: userbook }: UserBook = await supabase
             </a>
         ))
     }
-    <form
+    <!-- <form
         action="/api/v0/userbook/add"
         method="post"
         class="w-full rounded-lg p-8 shadow-md shadow-black flex flex-col gap-1 bg-surface-100 dark:bg-surfacedark-100"
@@ -50,5 +30,5 @@ const { data: userbook }: UserBook = await supabase
             class="focus:outline-none block w-full rounded-full placeholder-gray-500 text-2xl text-gray-600 transition duration-300
             bg-transparent caret-white"
         />
-    </form>
+    </form> -->
 </div>
