--- a/old app/_app/books/[book_id]-[book_name].astro
+++ b/old app/_app/books/[book_id]-[book_name].astro
@@ -1,5 +1,5 @@
 ---
-import Layout from "@components/layouts/index.astro";
+import Layout from "@layout";
 import { supabase } from "@lib/supabase";
 import SetBook from "@components/userbook/SetBookName.astro";
 
