--- a/old app/_app/books/index.astro
+++ b/old app/_app/books/index.astro
@@ -1,7 +1,7 @@
 ---
 
 import ListUserBooks from "@components/userbook/ListUserBooks.astro";
-import Layout from "@components/layouts/index.astro";
+import Layout from "@layout";
 
 import {$user} from '@lib/user/user.store'
 
