--- a/src/pages/app/session/results.astro
+++ b/src/pages/app/session/results.astro
@@ -1,8 +1,6 @@
 ---
-import Layout from "@components/layouts/index.astro";
+import Layout from "@layout";
 
-import ListReview from "@components/client/session_interface/ListReview";
-import {$user} from '@lib/user/user.store'
 
 
 
@@ -15,6 +13,6 @@ import {$user} from '@lib/user/user.store'
 
             <a href={"/app/study"} class={"rounded-full bg-sky-500 dark:bg-sky-400 h-11 flex items-center justify-center px-6 py-3 transition hover:bg-sky-600 focus:bg-sky-600 active:bg-sky-800"}>Nueva session</a>
         </div>
-        <ListReview client:only="preact"/>
+        <!-- <ListReview client:only="preact"/> -->
     </div>
 </Layout>
