--- a/src/shared/layout/navigation/Navbar.astro
+++ b/src/shared/layout/navigation/Navbar.astro
@@ -1,5 +1,5 @@
 ---
-import Logout from "@app/user/logout/Logout";
+import Logout from "@app/user/logout/Logout.component";
 import Navigator from "./Navigator.astro";
 import Settings from "@app/user/Protected";
 ---
