--- a/src/pages/app/session/results.astro
+++ b/src/pages/app/session/results.astro
@@ -2,11 +2,12 @@
 import Layout from "@layout";
 
 
-
+import { getUserSsr } from "@app/user/auth/controllers";
+const userdata = await getUserSsr(Astro);
 
 ---
 
-<Layout>
+<Layout userdata={userdata}>
     <div class="container mx-auto ">
         <div class={"flex justify-between"}>
             <h1 class={"text-3xl font-bold mb-10"}>carrusel expressions</h1>
